logs/sighan/bert_Flat_base_raw.epoch10.bs64.log
  File "bert_Flat.py", line 294
    len(vocabs['label']),
    ^
SyntaxError: positional argument follows keyword argument
